<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail" android:orientation="vertical">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="8dp">


            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@android:color/darker_gray" />

            <LinearLayout
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:layout_toRightOf="@+id/img_item_photo"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/name"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_set_name"/>
                <TextView
                        android:text="@string/content_rank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_item_rank"/>

            </LinearLayout>

        </RelativeLayout>

        <TextView
                android:text="@string/identity"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="18dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/title_identity"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"/>
                <TextView
                        android:text="@string/content_identity"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tv_set_identity"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
                android:text="@string/overview"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="18dp">

            <TextView
                    android:text="@string/content_overview"
                    android:textColor="@android:color/black"
                    android:justificationMode="inter_word"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_set_overview"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>